# GSL-Examples

./: README.md
C++/Aproximacion Pi/: CMakeLists.txt  README.md  README.odt  grafica.gp  main.cpp
C++/Capacitor/: README.odt  (+2 more)
Caminata Aleatoria/: CMakeLists.txt  README.md  grafica.gp
Campo Electrico/: CMakeLists.txt  README.md  README.odt  grafica.gp  main.cpp
Capacitor/: CMakeLists.txt  README.md  main.cpp
Crear datos y graficar/: CMakeLists.txt  README.md  README.odt  grafica.gp  main.cpp
Distribucion Poisson/: main.cpp
Ecuacion Diferencial/: README.md  main.cpp
Ejemplo 1/: Ejemplo1.c  README.md  README.odt  a.out
Ejemplo Integral/: CMakeLists.txt  README.md  main.cpp
Ejemplo Integral 2/: CMakeLists.txt  README.md  main.cpp
Estadistica/: CMakeLists.txt  main.cpp
Fractal/: CMakeLists.txt  main.cpp
Numeros Aleatorios/: CMakeLists.txt  README.md
Numeros Complejos/: CMakeLists.txt  NumerosComplejos.ipynb  README.md  README.odt  main.cpp
Probabilidad Acumulada/: main.cpp
Probabilidad y Estadística/Regresion Lineal/: .directory  CMakeLists.txt  README.md  README.odt  RegresionLineal.ipynb  grafica.gp  main.cpp
Probabilidad y Estadística/Regresion Lineal/.ipynb_checkpoints/: RegresionLineal-checkpoint.ipynb
Regresion Lineal/: README.md  main.cpp  randomdata.ipynb
Regresion Lineal 2/: README.md  data.csv  grafica.gp  main.cpp
Regresion Lineal Simple/: README.md  main.cpp
Regresion Lineal Simple desde csv/: README.md  grafica.gp  main.cpp  randomdata.ipynb
Sistema de ecuaciones lineales/: main.cpp
Valores propios/: README.md  main.cpp
(+131 files in other folders)
